M1/Compilation/5TP/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On WHILE shift to state 1
-- On VAR shift to state 63
-- On RETURN shift to state 66
-- On PRINT shift to state 69
-- On NOT shift to state 2
-- On NEWLINE shift to state 72
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 74
-- On FUN shift to state 82
-- On EXIT shift to state 90
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On BEGIN shift to state 62
-- On prog shift to state 103
-- On list(instr) shift to state 104
-- On instr shift to state 94
-- On field_expr shift to state 96
-- On expr shift to state 100
-- On const shift to state 31
-- On block shift to state 101
-- On EOF reduce production list(instr) -> 

State 1:
instr -> WHILE . expr block [ WHILE VAR RETURN PRINT NOT NEWLINE MINUS LPAREN LBRACKET IF IDENT FUN EXIT EOF END CONST_INT CONST_BOOL BEGIN ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 61
-- On const shift to state 31

State 2:
expr -> NOT . expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 60
-- On const shift to state 31

State 3:
expr -> MINUS . expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 59
-- On const shift to state 31

State 4:
expr -> LPAREN . expr RPAREN [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 57
-- On const shift to state 31

State 5:
expr -> LBRACKET . expr RBRACKET [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 55
-- On const shift to state 31

State 6:
expr -> IF . expr THEN expr ELSE expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 50
-- On const shift to state 31

State 7:
expr -> IDENT . [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> IDENT . LPAREN list(expr) RPAREN SEMI [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On LPAREN shift to state 8
-- On THEN reduce production expr -> IDENT 
-- On SEMI reduce production expr -> IDENT 
-- On RPAREN reduce production expr -> IDENT 
-- On RBRACKET reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On OR reduce production expr -> IDENT 
-- On NOT reduce production expr -> IDENT 
-- On NEQ reduce production expr -> IDENT 
-- On MULT reduce production expr -> IDENT 
-- On MINUS reduce production expr -> IDENT 
-- On LT reduce production expr -> IDENT 
-- On LPAREN reduce production expr -> IDENT 
-- On LE reduce production expr -> IDENT 
-- On LBRACKET reduce production expr -> IDENT 
-- On IF reduce production expr -> IDENT 
-- On IDENT reduce production expr -> IDENT 
-- On GT reduce production expr -> IDENT 
-- On GE reduce production expr -> IDENT 
-- On EQ reduce production expr -> IDENT 
-- On ELSE reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On CONST_INT reduce production expr -> IDENT 
-- On CONST_BOOL reduce production expr -> IDENT 
-- On BEGIN reduce production expr -> IDENT 
-- On AND reduce production expr -> IDENT 
** Conflict on LPAREN

State 8:
expr -> IDENT LPAREN . list(expr) RPAREN SEMI [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On list(expr) shift to state 11
-- On field_expr shift to state 14
-- On expr shift to state 15
-- On const shift to state 31
-- On RPAREN reduce production list(expr) -> 

State 9:
const -> CONST_INT . [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On THEN reduce production const -> CONST_INT 
-- On SEMI reduce production const -> CONST_INT 
-- On RPAREN reduce production const -> CONST_INT 
-- On RBRACKET reduce production const -> CONST_INT 
-- On PLUS reduce production const -> CONST_INT 
-- On OR reduce production const -> CONST_INT 
-- On NOT reduce production const -> CONST_INT 
-- On NEQ reduce production const -> CONST_INT 
-- On MULT reduce production const -> CONST_INT 
-- On MINUS reduce production const -> CONST_INT 
-- On LT reduce production const -> CONST_INT 
-- On LPAREN reduce production const -> CONST_INT 
-- On LE reduce production const -> CONST_INT 
-- On LBRACKET reduce production const -> CONST_INT 
-- On IF reduce production const -> CONST_INT 
-- On IDENT reduce production const -> CONST_INT 
-- On GT reduce production const -> CONST_INT 
-- On GE reduce production const -> CONST_INT 
-- On EQ reduce production const -> CONST_INT 
-- On ELSE reduce production const -> CONST_INT 
-- On DIV reduce production const -> CONST_INT 
-- On CONST_INT reduce production const -> CONST_INT 
-- On CONST_BOOL reduce production const -> CONST_INT 
-- On BEGIN reduce production const -> CONST_INT 
-- On AND reduce production const -> CONST_INT 

State 10:
const -> CONST_BOOL . [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On THEN reduce production const -> CONST_BOOL 
-- On SEMI reduce production const -> CONST_BOOL 
-- On RPAREN reduce production const -> CONST_BOOL 
-- On RBRACKET reduce production const -> CONST_BOOL 
-- On PLUS reduce production const -> CONST_BOOL 
-- On OR reduce production const -> CONST_BOOL 
-- On NOT reduce production const -> CONST_BOOL 
-- On NEQ reduce production const -> CONST_BOOL 
-- On MULT reduce production const -> CONST_BOOL 
-- On MINUS reduce production const -> CONST_BOOL 
-- On LT reduce production const -> CONST_BOOL 
-- On LPAREN reduce production const -> CONST_BOOL 
-- On LE reduce production const -> CONST_BOOL 
-- On LBRACKET reduce production const -> CONST_BOOL 
-- On IF reduce production const -> CONST_BOOL 
-- On IDENT reduce production const -> CONST_BOOL 
-- On GT reduce production const -> CONST_BOOL 
-- On GE reduce production const -> CONST_BOOL 
-- On EQ reduce production const -> CONST_BOOL 
-- On ELSE reduce production const -> CONST_BOOL 
-- On DIV reduce production const -> CONST_BOOL 
-- On CONST_INT reduce production const -> CONST_BOOL 
-- On CONST_BOOL reduce production const -> CONST_BOOL 
-- On BEGIN reduce production const -> CONST_BOOL 
-- On AND reduce production const -> CONST_BOOL 

State 11:
expr -> IDENT LPAREN list(expr) . RPAREN SEMI [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On RPAREN shift to state 12

State 12:
expr -> IDENT LPAREN list(expr) RPAREN . SEMI [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On SEMI shift to state 13

State 13:
expr -> IDENT LPAREN list(expr) RPAREN SEMI . [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On THEN reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On SEMI reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On RPAREN reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On RBRACKET reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On PLUS reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On OR reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On NOT reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On NEQ reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On MULT reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On MINUS reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On LT reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On LPAREN reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On LE reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On LBRACKET reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On IF reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On IDENT reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On GT reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On GE reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On EQ reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On ELSE reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On DIV reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On CONST_INT reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On CONST_BOOL reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On BEGIN reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 
-- On AND reduce production expr -> IDENT LPAREN list(expr) RPAREN SEMI 

State 14:
expr -> field_expr . [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On THEN reduce production expr -> field_expr 
-- On SEMI reduce production expr -> field_expr 
-- On RPAREN reduce production expr -> field_expr 
-- On RBRACKET reduce production expr -> field_expr 
-- On PLUS reduce production expr -> field_expr 
-- On OR reduce production expr -> field_expr 
-- On NOT reduce production expr -> field_expr 
-- On NEQ reduce production expr -> field_expr 
-- On MULT reduce production expr -> field_expr 
-- On MINUS reduce production expr -> field_expr 
-- On LT reduce production expr -> field_expr 
-- On LPAREN reduce production expr -> field_expr 
-- On LE reduce production expr -> field_expr 
-- On LBRACKET reduce production expr -> field_expr 
-- On IF reduce production expr -> field_expr 
-- On IDENT reduce production expr -> field_expr 
-- On GT reduce production expr -> field_expr 
-- On GE reduce production expr -> field_expr 
-- On EQ reduce production expr -> field_expr 
-- On ELSE reduce production expr -> field_expr 
-- On DIV reduce production expr -> field_expr 
-- On CONST_INT reduce production expr -> field_expr 
-- On CONST_BOOL reduce production expr -> field_expr 
-- On BEGIN reduce production expr -> field_expr 
-- On AND reduce production expr -> field_expr 

State 15:
expr -> expr . PLUS expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . MINUS expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . MULT expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . DIV expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . AND expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . OR expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . EQ expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . NEQ expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . LT expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . LE expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . GT expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
expr -> expr . GE expr [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
field_expr -> expr . LBRACKET expr RBRACKET [ RPAREN PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ DIV CONST_INT CONST_BOOL AND ]
list(expr) -> expr . list(expr) [ RPAREN ]
-- On PLUS shift to state 16
-- On OR shift to state 23
-- On NOT shift to state 2
-- On NEQ shift to state 25
-- On MULT shift to state 18
-- On MINUS shift to state 44
-- On LT shift to state 32
-- On LPAREN shift to state 4
-- On LE shift to state 34
-- On LBRACKET shift to state 46
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On GT shift to state 36
-- On GE shift to state 38
-- On EQ shift to state 40
-- On DIV shift to state 29
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On AND shift to state 42
-- On list(expr) shift to state 49
-- On field_expr shift to state 14
-- On expr shift to state 15
-- On const shift to state 31
-- On RPAREN reduce production list(expr) -> 

State 16:
expr -> expr PLUS . expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 17
-- On const shift to state 31

State 17:
expr -> expr . PLUS expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr PLUS expr . [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . MINUS expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . MULT expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . DIV expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . AND expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . OR expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . EQ expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . NEQ expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . LT expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . LE expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . GT expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . GE expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
field_expr -> expr . LBRACKET expr RBRACKET [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On MULT shift to state 18
-- On LBRACKET shift to state 20
-- On DIV shift to state 29
-- On THEN reduce production expr -> expr PLUS expr 
-- On SEMI reduce production expr -> expr PLUS expr 
-- On RPAREN reduce production expr -> expr PLUS expr 
-- On RBRACKET reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NOT reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LPAREN reduce production expr -> expr PLUS expr 
-- On LE reduce production expr -> expr PLUS expr 
-- On IF reduce production expr -> expr PLUS expr 
-- On IDENT reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GE reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On ELSE reduce production expr -> expr PLUS expr 
-- On CONST_INT reduce production expr -> expr PLUS expr 
-- On CONST_BOOL reduce production expr -> expr PLUS expr 
-- On BEGIN reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 18:
expr -> expr MULT . expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 19
-- On const shift to state 31

State 19:
expr -> expr . PLUS expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . MINUS expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . MULT expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr MULT expr . [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . DIV expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . AND expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . OR expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . EQ expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . NEQ expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . LT expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . LE expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . GT expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . GE expr [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
field_expr -> expr . LBRACKET expr RBRACKET [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On LBRACKET shift to state 20
-- On THEN reduce production expr -> expr MULT expr 
-- On SEMI reduce production expr -> expr MULT expr 
-- On RPAREN reduce production expr -> expr MULT expr 
-- On RBRACKET reduce production expr -> expr MULT expr 
-- On PLUS reduce production expr -> expr MULT expr 
-- On OR reduce production expr -> expr MULT expr 
-- On NOT reduce production expr -> expr MULT expr 
-- On NEQ reduce production expr -> expr MULT expr 
-- On MULT reduce production expr -> expr MULT expr 
-- On MINUS reduce production expr -> expr MULT expr 
-- On LT reduce production expr -> expr MULT expr 
-- On LPAREN reduce production expr -> expr MULT expr 
-- On LE reduce production expr -> expr MULT expr 
-- On IF reduce production expr -> expr MULT expr 
-- On IDENT reduce production expr -> expr MULT expr 
-- On GT reduce production expr -> expr MULT expr 
-- On GE reduce production expr -> expr MULT expr 
-- On EQ reduce production expr -> expr MULT expr 
-- On ELSE reduce production expr -> expr MULT expr 
-- On DIV reduce production expr -> expr MULT expr 
-- On CONST_INT reduce production expr -> expr MULT expr 
-- On CONST_BOOL reduce production expr -> expr MULT expr 
-- On BEGIN reduce production expr -> expr MULT expr 
-- On AND reduce production expr -> expr MULT expr 

State 20:
field_expr -> expr LBRACKET . expr RBRACKET [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN ASSIGN AND ]
-- On NOT shift to state 2
-- On MINUS shift to state 3
-- On LPAREN shift to state 4
-- On LBRACKET shift to state 5
-- On IF shift to state 6
-- On IDENT shift to state 7
-- On CONST_INT shift to state 9
-- On CONST_BOOL shift to state 10
-- On field_expr shift to state 14
-- On expr shift to state 21
-- On const shift to state 31

State 21:
expr -> expr . PLUS expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . MINUS expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . MULT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . DIV expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . AND expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . OR expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . EQ expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . NEQ expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . LT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . LE expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . GT expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
expr -> expr . GE expr [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
field_expr -> expr . LBRACKET expr RBRACKET [ RBRACKET PLUS OR NEQ MULT MINUS LT LE LBRACKET GT GE EQ DIV AND ]
field_expr -> expr LBRACKET expr . RBRACKET [ THEN SEMI RPAREN RBRACKET PLUS OR NOT NEQ MULT MINUS LT LPAREN LE LBRACKET IF IDENT GT GE EQ ELSE DIV CONST_INT CONST_BOOL BEGIN ASSIGN AND ]
-- On RBRACKET shift to state 22
-- On PLUS shift to state 16
-- On OR shift to state 23
-- On NEQ shift to state 25
-- On MULT shift to state 18
-- On MINUS shift to state 27
-- On LT shift to state 32
-- On LE shift to state 34
-- On LBRACKET shift to state 20
-- On GT shift to state 36
-- On GE shift to state 38
-- On EQ shift to state 40
-- On DIV shift to state 29
-- On AND shift to state 42
